--- a/.github/workflows/comment_plan.yaml
+++ b/.github/workflows/comment_plan.yaml
@@ -1,4 +1,4 @@
-name: Terraform Plan (Comment Trigger) # ワークフロー名をコメント用と明確にする
+name: Terraform Comment Plan
 
 on:
   # Pull Requestのコメントが作成されたときにトリガー
@@ -11,11 +11,10 @@ jobs:
   comment_plan:
     name: Plan on Comment
     runs-on: ubuntu-latest
-    # コメントトリガーで、コメント内容が"plan"で、それがPRに対するコメントの場合に実行
-    # トップレベルのonでissue_commentのみを指定したので、ここではコメント内容とPRに対するコメントかのチェックのみでOK
+    # コメントトリガーで、コメント内容が"plan"を含み、それがPRに対するコメントの場合に実行
     if: contains(github.event.comment.body, 'plan') && github.event.issue.pull_request
     permissions:
-      pull-requests: write # PRにコメントするために必要
+      pull-requests: write
       contents: read
     steps:
       - name: Checkout code
@@ -36,38 +35,91 @@ jobs:
         with:
           terraform_version: latest
 
-      # スクリプト実行に必要なNode.js環境をセットアップ (actions/github-script が内部で使うため不要な可能性あり)
-      # 明示的にバージョンを指定したい場合は残しておきます
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20' # スクリプトの実行に必要なNode.jsバージョンを指定
-
-      # Terraform Init と Plan (JSON出力)
-      - name: Terraform Init and Plan (JSON)
+      # Terraform Init と Plan を実行
+      - name: Run Terraform Init and Plan
+        id: tf_steps
+        working-directory: ./envs/dev/souvenirConsultApp/
         run: |
-          terraform init -backend=true -reconfigure
-          # Plan結果をJSON形式で出力し、ファイルに保存
-          terraform plan -json > plan.json
-        working-directory: ./envs/dev/souvenirConsultApp/ # Terraformのルートモジュールディレクトリを指定
+          terraform init -backend=true -reconfigure || true
+          # Plan結果をファイルに保存 (-no-color オプションを追加)
+          # エラーが発生しても後続ステップを実行するために || true を追加
+          terraform plan -no-color > plan_output.txt || true
+          
+          # Plan結果ファイルの内容を環境変数に格納
+          if [ -f plan_output.txt ]; then
+            PLAN_CONTENT=$(cat plan_output.txt)
+            # キャリアリターンをLFに変換
+            PLAN_CONTENT=$(echo "$PLAN_CONTENT" | tr -d '\r') 
+            echo "PLAN<<EOF" >> $GITHUB_ENV
+            echo "$PLAN_CONTENT" >> $GITHUB_ENV
+            echo "EOF" >> $GITHUB_ENV
+          fi
 
-      # JavaScriptファイルの内容を読み込み、環境変数として設定
-      - name: Read Script File
-        id: read_script # このステップにIDを付与
-        run: |
-          SCRIPT_CONTENT=$(cat .github/scripts/format_plan_comment.js) # ファイル内容を読み込み
-          # ファイル内容を複数行の環境変数として設定
-          # 環境変数名は ACTIONS_STEP_DEBUG=true でデバッグログに出力されます
-          echo "SCRIPT_CONTENT<<EOF" >> $GITHUB_ENV
-          echo "$SCRIPT_CONTENT" >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
-        # working-directory はデフォルトのリポジトリルートでOK
-        # スクリプトファイルのパスはリポジトリルートからの相対パスで指定
-
-      # Plan結果をパースして差分形式でコメント (読み込んだスクリプト内容をインラインで実行)
-      - name: Add Formatted Plan comment to PR
+      # Plan結果をPRコメントに投稿・更新
+      - name: Add Terraform Plan comment to PR
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          # 環境変数からスクリプト内容を取得し、インラインスクリプトとして渡す
-          script: ${{ env.SCRIPT_CONTENT }} # ★ ここを修正 ★
+          script: |
+            // Plan結果のコンテンツを取得
+            const planOutput = process.env.PLAN || ''; // 環境変数 PLAN から取得、存在しない場合は空文字列
+            
+            // Planセクションに表示するコンテンツを決定
+            let planSectionContent = '';
+            // terraform plan -no-color の出力に "No changes." が含まれるか確認
+            if (planOutput.includes('No changes. Your infrastructure matches the configuration.')) {
+                planSectionContent = `\nNo changes. Your infrastructure matches the configuration.\n`;
+            } else if (planOutput) {
+                // Plan結果がある場合、diff形式で表示
+                planSectionContent = `\n\`\`\`diff\n${planOutput}\n\`\`\`\n`;
+            } else {
+                // Plan出力が得られなかった場合
+                planSectionContent = `\nCould not generate plan output. Please check the job logs for details.\n`;
+            }
+            
+            // 既存のボットコメントを検索
+            // コメントトリガー用の新しい識別子を設定します
+            const commentIdentifier = '### Terraform Plan Result (Triggered by Comment)'; 
+            const { data: comments } = await github.rest.issues.listComments({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+            });
+            // 自身のボットが投稿した、このワークフローの結果を示すコメントを探す
+            const botComment = comments.find(comment => {
+              return comment.user.type === 'Bot' && comment.body.includes(commentIdentifier);
+            });
+            
+            const output = `${commentIdentifier}
+            
+            #### Terraform Format and Style 🖌\`N/A\` #### Terraform Initialization ⚙️\`${{ steps.tf_steps.outcome || 'failure' }}\` #### Terraform Validation 🤖\`N/A\` <details><summary>Validation Output</summary>
+            
+            \`\`\`terraform
+            N/A \`\`\`
+            
+            </details>
+            
+            #### Terraform Plan 📖\`${{ steps.tf_steps.outcome || 'failure' }}\` <details><summary>Show Plan</summary>
+            
+            ${planSectionContent} </details>
+            
+            _Triggered by comment: @${{ github.actor }}_
+            _Working Directory: \`./envs/dev/souvenirConsultApp/\`_
+            `;
+            
+            // コメントの更新または作成
+            if (botComment) {
+              await github.rest.issues.updateComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: botComment.id,
+                body: output
+              });
+            } else {
+              await github.rest.issues.createComment({
+                issue_number: context.issue.number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body: output
+              });
+            }
