--- a/.github/workflows/push_plan.yaml
+++ b/.github/workflows/push_plan.yaml
@@ -49,66 +49,112 @@ jobs:
               - '**/*.tf'
               - '.terraform.lock.hcl' # ロックファイルも対象に含める
 
-      # .tfファイルの差分がある場合のみPlanを実行
-      - name: Terraform Init and Plan
+      # Terraform fmt, init, validate, plan を実行
+      # .tfファイルの差分がある場合のみ実行
+      - name: Run Terraform Checks and Plan
+        id: tf_steps # 各ステップの結果をまとめて参照するためのID
         if: steps.check_files.outputs.tf_changed == 'true'
+        working-directory: ./envs/dev/souvenirConsultApp/ # Terraformのルートモジュールディレクトリを指定
         run: |
+          # fmt, init, validate は失敗しても Plan を実行するために || true を追加
+          # 結果はステップの outcomes で判定します
+          terraform fmt -check -diff || true
           terraform init -backend=true -reconfigure
-          terraform plan -no-color | tee plan.txt # 出力をファイルに保存して色を消す
-        working-directory: ./envs/dev/souvenirConsultApp/
+          terraform validate || true
+          
+          # Plan結果をファイルに保存 (-no-color オプションを追加)
+          # エラーが発生しても後続ステップを実行するために || true を追加
+          terraform plan -no-color > plan_output.txt || true # <- ここに -no-color を追加
+          
+          # Plan結果ファイルの内容を環境変数に格納
+          if [ -f plan_output.txt ]; then
+            PLAN_CONTENT=$(cat plan_output.txt)
+            # 環境変数に複数行の文字列を設定
+            # キャリアリターンをLFに変換（Windows環境などでCRLFになっている可能性があるため）
+            PLAN_CONTENT=$(echo "$PLAN_CONTENT" | tr -d '\r') 
+            echo "PLAN<<EOF" >> $GITHUB_ENV
+            echo "$PLAN_CONTENT" >> $GITHUB_ENV
+            echo "EOF" >> $GITHUB_ENV
+          fi
 
-      # 差分がある場合のみPlan結果をPRにコメント
-      - name: Add Plan comment to PR
-        if: steps.check_files.outputs.tf_changed == 'true'
+      # PRコメントに結果を投稿・更新
+      - name: Add Terraform Checks and Plan comment to PR
         uses: actions/github-script@v7
+        if: github.event_name == 'pull_request'
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const fs = require('fs');
-            // ファイルパスを修正
-            const planOutput = fs.readFileSync('./envs/dev/souvenirConsultApp/plan.txt', 'utf8');
-            const pull_request_number = context.issue.number;
-            const comment = `
-            ### \`terraform plan\` Result
+            // tf_changed の結果を取得
+            const tfChanged = `${{ steps.check_files.outputs.tf_changed }}` === 'true';
             
-            <details><summary>Click to expand plan</summary>
+            // Plan結果のコンテンツを取得
+            const planOutput = process.env.PLAN || ''; // 環境変数 PLAN から取得、存在しない場合は空文字列
             
-            \`\`\`hcl
-            ${planOutput}
+            // Planセクションに表示するコンテンツを決定
+            let planSectionContent = '';
+            if (!tfChanged) {
+                // .tf ファイルの差分がない場合
+                planSectionContent = `\nNo changes detected in \`.tf\` files.\n`;
+            } else if (planOutput.includes('No changes. Your infrastructure matches the configuration.')) {
+                // plan 実行結果が「No changes」だった場合
+                planSectionContent = `\nNo changes. Your infrastructure matches the configuration.\n`;
+            } else if (planOutput) {
+                // Plan結果がある場合、diff形式で表示
+                planSectionContent = `\n\`\`\`diff\n${planOutput}\n\`\`\`\n`;
+            } else {
+                // Plan出力が得られなかった場合
+                planSectionContent = `\nCould not generate plan output. Please check the job logs for details.\n`;
+            }
+            
+            // 既存のボットコメントを検索
+            const commentIdentifier = '### Terraform Workflow Results';
+            const { data: comments } = await github.rest.issues.listComments({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+            });
+            const botComment = comments.find(comment => {
+              return comment.user.type === 'Bot' && comment.body.includes(commentIdentifier);
+            });
+            
+            // コメント本文の生成
+            const output = `${commentIdentifier}
+            
+            #### Terraform Format and Style 🖌\`${{ steps.tf_steps.outcome || 'skipped' }}\`
+            #### Terraform Initialization ⚙️\`${{ steps.tf_steps.outcome || 'skipped' }}\`
+            #### Terraform Validation 🤖\`${{ steps.tf_steps.outcome || 'skipped' }}\`
+            <details><summary>Validation Output</summary>
+            
+            \`\`\`terraform
+            ${{ steps.tf_steps.outputs.stdout || 'N/A' }}
             \`\`\`
             
             </details>
             
-            _Ran on commit \`${context.sha}\`_
+            #### Terraform Plan 📖\`${{ steps.tf_steps.outcome || 'skipped' }}\`
+            
+            <details><summary>Show Plan</summary>
+            
+            ${planSectionContent}
+            
+            </details>
+            
+            _Pusher: @${{ github.actor }}, Working Directory: \`./envs/dev/souvenirConsultApp/\`_
             `;
             
-            await github.rest.issues.createComment({
-              issue_number: pull_request_number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: comment
-            });
-
-      # .tfファイルの差分がない場合にその旨をコメント
-      - name: Add No changes comment to PR
-        if: steps.check_files.outputs.tf_changed == 'false'
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const pull_request_number = context.issue.number;
-            const comment = `
-            ### \`terraform plan\` Skipped
-            
-            No changes detected in \`.tf\` files.
-            
-            _Ran on commit \`${context.sha}\`_
-            `;
-            
-            await github.rest.issues.createComment({
-              issue_number: pull_request_number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: comment
-            });
-    
+            // コメントの更新または作成
+            if (botComment) {
+              await github.rest.issues.updateComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: botComment.id,
+                body: output
+              });
+            } else {
+              await github.rest.issues.createComment({
+                issue_number: context.issue.number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body: output
+              });
+            }
