--- a/.github/workflows/comment_plan.yaml
+++ b/.github/workflows/comment_plan.yaml
@@ -66,17 +66,18 @@ jobs:
             
             // Planセクションに表示するコンテンツを決定
             let planSectionContent = '';
-            // terraform plan -no-color の出力に "No changes." が含まれるか確認
-            if (planOutput.includes('No changes. Your infrastructure matches the configuration.')) {
-                planSectionContent = `No changes. Your infrastructure matches the configuration.`;
+            if (!tfChanged) {
+                // .tf ファイルの差分がない場合
+                planSectionContent = `\nNo changes detected in \`.tf\` files.\n`;
+            } else if (planOutput.includes('No changes. Your infrastructure matches the configuration.')) {
+                // plan 実行結果が「No changes」だった場合
+                planSectionContent = `\nNo changes. Your infrastructure matches the configuration.\n`;
             } else if (planOutput) {
-                // Plan結果がある場合、diff形式で表示 (色付きはGitHubのレンダリングに依存)
-                // Plan出力自体の末尾に不要な改行がないことを想定
-                planSectionContent = `\`\`\`diff\n${planOutput}\n\`\`\``;
+                // Plan結果がある場合、diff形式で表示
+                planSectionContent = `\n\`\`\`diff\n${planOutput}\n\`\`\`\n`;
             } else {
-                // Plan出力が得られなかった場合 (例: Plan実行ステップが失敗など)
-                // エラーメッセージなども含まれる可能性があるため、Plan出力をそのまま表示
-                planSectionContent = `Could not generate plan output or an error occurred. Please check the job logs for details.\n\n${planOutput}`;
+                // Plan出力が得られなかった場合
+                planSectionContent = `\nCould not generate plan output. Please check the job logs for details.\n`;
             }
             
             // 既存のボットコメントを検索
@@ -92,48 +93,45 @@ jobs:
               return comment.user.type === 'Bot' && comment.body.includes(commentIdentifier);
             });
             
-            // コメント本文の生成 - 改行と空行を厳密に調整
+            // コメント本文の生成
             const output = `${commentIdentifier}
-
-              #### Terraform Format and Style 🖌\`N/A\`
             
-              #### Terraform Initialization ⚙️\`${{ steps.tf_steps.outcome || 'failure' }}\`
+            #### Terraform Format and Style 🖌\`${{ steps.tf_steps.outcome || 'skipped' }}\`
+            #### Terraform Initialization ⚙️\`${{ steps.tf_steps.outcome || 'skipped' }}\`
+            #### Terraform Validation 🤖\`${{ steps.tf_steps.outcome || 'skipped' }}\`
+            <details><summary>Validation Output</summary>
             
-              #### Terraform Validation 🤖\`N/A\`
             
-                <details><summary>Validation Output</summary>
+            \`\`\`terraform
+            ${{ steps.tf_steps.outputs.stdout || 'N/A' }}
+            \`\`\`
             
-                \`\`\`terraform
-                N/A
-                \`\`\`
+            </details>
             
-                </details>
+            #### Terraform Plan 📖\`${{ steps.tf_steps.outcome || 'skipped' }}\`
             
-                #### Terraform Plan 📖\`${{ steps.tf_steps.outcome || 'failure' }}\`
+            <details><summary>Show Plan</summary>
             
-                <details><summary>Show Plan</summary>
+            ${planSectionContent}
             
-                ${planSectionContent}
+            </details>
             
-                </details>
+            _Pusher: @${{ github.actor }}, Working Directory: \`./envs/dev/souvenirConsultApp/\`_
+            `;
             
-              _Triggered by comment: @${{ github.actor }}_
-              _Working Directory: \`./envs/dev/souvenirConsultApp/\`_
-                `;
-            
-                // コメントの更新または作成
-                if (botComment) {
-                await github.rest.issues.updateComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              comment_id: botComment.id,
-              body: output
+            // コメントの更新または作成
+            if (botComment) {
+              await github.rest.issues.updateComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: botComment.id,
+                body: output
               });
-              } else {
-                await github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: output
+            } else {
+              await github.rest.issues.createComment({
+                issue_number: context.issue.number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body: output
               });
-              }
+            }
