--- a/.github/workflows/comment_plan.yaml
+++ b/.github/workflows/comment_plan.yaml
@@ -61,6 +61,9 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
+            // tf_changed の結果を取得
+            const tfChanged = `${{ steps.check_files.outputs.tf_changed }}` === 'true';
+            
             // Plan結果のコンテンツを取得
             const planOutput = process.env.PLAN || ''; // 環境変数 PLAN から取得、存在しない場合は空文字列
             
@@ -88,7 +91,6 @@ jobs:
               repo: context.repo.repo,
               issue_number: context.issue.number,
             });
-            // 自身のボットが投稿した、このワークフローの結果を示すコメントを探す
             const botComment = comments.find(comment => {
               return comment.user.type === 'Bot' && comment.body.includes(commentIdentifier);
             });
